# U-chat-server

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  ion: unified JWT secret, gateway validation fixes"  mosquitto.conf  unhidra_enroll.py
auth-api/: Cargo.toml
auth-api/src/: handlers.rs  main.rs  oidc.rs  rate_limiter.rs  webauthn_service.rs
auth-api/src/services/: auth_service.rs  mod.rs
chat-service/: Cargo.toml
chat-service/src/: auth.rs  main.rs
chat-service/src/handlers/: channels.rs  files.rs  threads.rs
chat-service/tests/: integration.rs
core/: Cargo.toml
core/src/: lib.rs
docker/: Dockerfile.auth-api  Dockerfile.gateway  prometheus.yml
docs/: user-manual.md
docs/status/: DEPLOYMENT.md  PROGRESS.md  RESEARCH.md  TODO.md
event-hub-service/: Cargo.toml
event-hub-service/src/: main.rs
firmware/: .env.example  Cargo.toml  build.rs  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: main.rs
gateway-service/: Cargo.toml
gateway-service/src/: connection.rs  main.rs  metrics.rs  rate_limiter.rs  state.rs  ws_handler.rs
gateway-service/tests/: integration_tests.rs
migrations/: 001_argon2id_password_hash.sql  002_devices_table.sql
ml-bridge/: Cargo.toml
ml-bridge/src/: lib.rs
ml-bridge/src/workers/: ml_bridge.rs  mod.rs
proto/: Cargo.toml
scripts/: inference_worker.py
startup-check/: Cargo.toml
tauri-client/: Cargo.toml
tauri-client/src/: main.rs
uchat-proto/: Cargo.toml
uchat-proto/src/: errors.rs  events.rs  jwt.rs  lib.rs
unhidra-gui/: Cargo.toml
unhidra-gui/src/: main.rs
