[workspace]
members = [
    "auth-api",
    "auth-service",
    "bot",
    "bot-service",
    "chat-service",
    "client",
    "core",
    "event-hub-service",
    "gateway-service",
    "history-service",
    "net",
    "presence-service",
    "proto",
    "server",
    "storage",
]

# Prevent GUI tools from being built as part of workspace
exclude = [
    "unhidra-snapshot-gui",
    "unhidra-snapshots",
    "unhidra-vcs-gui",
]
