[workspace]
resolver = "2"

members = [
    # Core services
    "auth-api",
    "gateway-service",
    "chat-service",
    "presence-service",
    "history-service",
    "bot-service",
    "event-hub-service",
    "auth-service",

    # Shared libraries
    "jwt-common",
    "uchat-proto",
    "proto",
    "core",
    "storage",
    "net",
    "e2ee",
    "client-e2ee",

    # ML infrastructure
    "ml-bridge",

    # Applications
    "client",
    "bot",
    "server",
    "unhidra-gui",
    "unhidra-vcs-gui",
    "startup-check",
]

# Shared dependency versions for consistency
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
chrono = "0.4"

# E2EE cryptography dependencies
snow = "0.9"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
zeroize = { version = "1.8", features = ["derive"] }
once_cell = "1.19"

# SSO/Auth dependencies
openidconnect = { version = "3.5", features = ["reqwest"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"

# Redis for horizontal scaling
redis = { version = "0.25", features = ["streams", "tokio-comp", "connection-manager"] }

# Database (PostgreSQL for enterprise)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# MQTT for IoT
rumqttc = { version = "0.24", features = ["websocket"] }

# Additional utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
dashmap = "6"
bytes = "1.7"
futures-util = "0.3"
hex = "0.4"
