[package]
name = "core"
version = "0.2.0"
edition = "2021"
description = "Core utilities and audit logging for Unhidra"

[dependencies]
# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time handling
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }
async-trait = "0.1"
once_cell = { workspace = true }
tokio = { workspace = true }

# Optional: Redis for distributed audit
redis = { workspace = true, optional = true }

# Optional: SQLite for local audit
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[features]
default = []
redis-audit = ["redis"]
sqlite-audit = ["rusqlite"]
