[package]
name = "gateway-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures-util = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

uchat-proto = { path = "../uchat-proto" }

chrono = "0.4"

# Axum replaces Hyper
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
